# airas-20251004-100643-tanaka

./: pyproject.toml
.research/: research_history.json
.research/iteration1/: .nfs0000000003d89ec400003b4c
.research/iteration1/ce-finetune/: config.yaml
.research/iteration1/gpt2-medium_brier-baseline/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-medium_ce-baseline/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-medium_dpsm-cosine/: config.yaml
.research/iteration1/gpt2-medium_dpsm-linear/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-small_brier-baseline/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-small_ce-baseline/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-small_dpsm-cosine/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-small_dpsm-fixed-alpha0.5/: config.yaml  epoch_metrics.json
.research/iteration1/gpt2-small_dpsm-linear/: config.yaml  epoch_metrics.json
.research/latex/agents4science_2025/: references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1-language-modelling-scaling.txt  derive_specific_experiments_exp-2-seq2seq-finetune-robustness.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-1-language-modelling-scaling.txt  (+1 more)
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+15 files in other folders)
